# embarcatech2-trabalho02

./: CMakeLists.txt  README.md  diagram.json  wokwi.toml
src/: main.c  ssd1306.c  ssd1306.h  ssd1306_font.h  ws2812b.pio  ws2812b_matrix.c  ws2812b_matrix.h
